# theblackrose

./: .eslintignore  .gitignore  LICENSE  README.md  vetur.config.js
backend/: .env.example  Cargo.toml  sqlx-data.json
backend/migrations/: 20210918093507_matchv5.sql  20220115080907_optional_account_id.sql  README.md
backend/migrations/2020-11-06-112002_add_users/: up.sql
backend/migrations/2020-11-08-125250_create_auth0_user_connection/: up.sql
backend/migrations/2020-11-09-083636_add_summoner/: down.sql  up.sql
backend/migrations/2020-11-09-095314_add_connection/: down.sql  up.sql
backend/migrations/2020-11-12-091805_add_summoner_query_time/: down.sql  up.sql
backend/migrations/2020-11-12-123759_add_match_models/: down.sql  up.sql
backend/migrations/2020-11-14-091841_summoner_optionals/: down.sql  up.sql
backend/migrations/2020-11-14-104206_summoner_unique_account_id/: down.sql  up.sql
backend/migrations/2020-11-15-144107_summoner_status/: down.sql  up.sql
backend/migrations/2020-11-15-160020_update_mr_pkey/: down.sql  up.sql
backend/migrations/2020-12-20-220354_records/: up.sql
backend/migrations/2020-12-21-134006_remove_match_reference_season/: down.sql  up.sql
backend/migrations/2020-12-21-150419_records_non_null/: down.sql  up.sql
backend/migrations/2020-12-22-005217_record_floats/: down.sql  up.sql
backend/migrations/2020-12-23-101819_add_notifications/: up.sql
backend/src/: actor.rs  actors.rs  auth.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  rito.rs  routes.rs  schema.rs  utils.rs
backend/src/actors/: gamefetcher.rs  statscollector.rs
backend/src/auth/: auth0.rs  cache.rs  helpers.rs  models.rs  validation.rs
backend/src/db/: connections.rs  matches.rs  notifications.rs  records.rs  stats.rs  summoners.rs  users.rs
backend/src/handlers/: connections.rs  live.rs  matches.rs  notifications.rs  records.rs  stats.rs  summoners.rs  users.rs
backend/src/models/: champions.rs  connections.rs  matches.rs  notifications.rs  records.rs  summoners.rs  users.rs
backend/src/rito/: summoners.rs
backend/src/routes/: connections.rs  live.rs  matches.rs  notifications.rs  records.rs  stats.rs  summoners.rs  users.rs
ddragon/: pull-patch.sh
frontend/: .env.example  .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  auth.ts  common.ts  ddragon.ts  fa.ts  main.ts  router.ts  state.ts  utils.ts
frontend/src/api/: matchfeed.ts  utils.ts
frontend/src/auth/: core.ts  route.ts
frontend/src/components/: ConnectionHeader.vue  DefaultHeader.vue  Filter.vue  Header.vue  HelloWorld.vue  MatchFetcher.vue  MatchList.vue  Records.vue  StatBar.vue
frontend/src/models/: champion.ts  connections.ts  match.ts  matchfeed.ts  notifications.ts  queue.ts  records.ts  spells.ts
(+20 files in other folders)
