[package]
name = "theblackrose-backend"
version = "0.1.0"
authors = ["Darragh Van Tichelen <info@darragh.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-cors = "0.6.0-beta.1"
actix-files = "=0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
actix-web-httpauth = "0.6.0-beta.1" 
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
jsonwebtoken = "7.2.0"
log = "0.4.14"
reqwest = "0.11.3"
riven = "2.5.0"
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.5.10", features = ["macros", "offline", "postgres", "runtime-tokio-native-tls", "chrono"] }
strum = "0.20.0"
strum_macros = "0.20.1"
tokio = { version = "1.6.0", features = ["full"] }
