[package]
name = "theblackrose-backend"
version = "0.1.0"
authors = ["Darragh Van Tichelen <info@darragh.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.6.0-beta.8"
actix-files = "0.6.0-beta.14"
actix-http = "3.0.0-beta.18"
actix-rt = "2.6.0"
actix-service = "2.0.2"
actix-web = "4.0.0-beta.20"
actix-web-httpauth = "0.6.0-beta.7" 
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
reqwest = "0.11.9"
riven = "2.5.0"
serde = "1.0.133"
serde_json = "1.0.75"
sqlx = { version = "0.5.10", features = ["macros", "postgres", "runtime-tokio-native-tls", "chrono"] }
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.15.0", features = ["full"] }
