[package]
name = "theblackrose-backend"
version = "0.1.0"
authors = ["Darragh Van Tichelen <info@darragh.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-files = "0.6.1"
actix-http = "3.1.0"
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0" 
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
reqwest = "0.11.11"
riven = "2.7.1"
serde = "1.0.137"
serde_json = "1.0.81"
sqlx = { version = "0.6.0", features = ["macros", "postgres", "runtime-tokio-native-tls", "chrono"] }
strum = "0.24.1"
strum_macros = "0.24.0"
tokio = { version = "1.19.2", features = ["full"] }
